--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "ngx-popover",
-  "version": "0.0.16",
+  "name": "ng-popover",
+  "version": "0.0.1",
   "description": "Simple popover control for your angular2 applications using bootstrap3.",
   "license": "MIT",
   "readmeFilename": "README.md",
   "private": true,
   "author": {
-    "name": "Umed Khudoiberdiev",
-    "email": "pleerock.me@gmail.com"
+    "name": "ADjilla",
+    "email": "djillaa@gmail.com"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/pleerock/ngx-popover.git"
+    "url": "https://github.com/adjilla/ng-popover.git"
   },
   "bugs": {
-    "url": "https://github.com/pleerock/ngx-popover/issues"
+    "url": "https://github.com/adjilla/ng-popover/issues"
   },
   "tags": [
     "popover",
